Fix NavMenu gap below header

--- a/portfolio-website/src/components/HeaderNavMenu/NavBody/navBody.module.css
+++ b/portfolio-website/src/components/HeaderNavMenu/NavBody/navBody.module.css
@@ -1,7 +1,7 @@
 .body {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 55px;
+  margin-top: 15vh;
   padding-left: 5px;
 }
 .link {
